# viz-dnn-blobs-ocv

./: CMakeLists.txt  README.md
data/: bvlc_googlenet.prototxt
src/: main.cpp
